Fix buttons on search on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,8 +78,7 @@ h4 {
   float: right;
 }
 
-@media screen and (max-width: 300px) {
-    .button-text {
-        display: none;
-    }
+.search-btn {
+    margin-top: 10px;
+    padding: 0 10px;
 }
